# when-to-ask

./: .gitignore  AWS_RUNBOOK.md  LICENSE  README.md  fable-build-prompt.md  pre-implementation brief.md  pyproject.toml  requirements-gpu.txt  when-to-ask-offline-online (1).md
configs/: derisk.yaml  smoke.yaml
data/: interpretation_classes.json
decisions/: 000-phase0-open-questions.md  001-xtid-supersession.md  002-a2-migration-strategy.md  003-third-party-licences.md  004-backbone-and-compute.md  005-interpretation-classes.md  006-read-position.md  007-sweep-ranges.md  008-n-and-diversity.md  009-off-registry-scope.md  010-open-item-defaults.md  011-build-all-phases-before-gates.md  012-collection-v1.5.md  013-first-gate-run-findings.md  014-multilayer-and-power.md  015-powered-gate-run-verdict.md  016-value-reads-and-v2-agent-plan.md  017-v2-agent-collection.md  018-scale-run-prep.md  019-test-protocol-and-comparability.md  020-new40-artifact-freeze.md  README.md
fixtures/: README.md  __init__.py  synthetic.py
harness/: README.md
scripts/: audit_class_artifact.py  audit_labels.py  clone_third_party.ps1  clone_third_party.sh  collect_a0.py  collect_v2.py  extract_task_context.py  generate_labels.py  prove_hook.py  provision_gpu.sh  run_derisk.py  run_full_gates.py  run_gates.py  run_pipeline_smoke.py  sweep.py  train_offline.py  v2_value_diag.py  value_read_analysis.py
specs/: A0-data-collection.md  A1-ambiguity-direction.md  A2-disentangling-autoencoder.md  A3-commitment.md  A4-gates.md  B-online-trigger.md  README.md  eval.md  labels.md
src/wta/: reads.py  (+14 more)
(+52 files in other folders)
